# ECSpo

./: .gitignore  LICENSE  README.md  __main__.py  example.py  mecs2.py  mecs2.toml  mecs2_commented.py  pyproject.toml
docs/: example.py  manual.md  tutorial.py
docs/for_users/: getting_started.md
docs/reference/: index.md
ecspo/: __init__.py  __main__.py  channel.py  observer.py  query.py  scene.py  storage.py  table.py
ecspo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: example.py
mecs/: __init__.py  __main__.py  mecs.py  test_mecs.py
package/: __init__.py  mecs.py  mecs2_commented.py  mecs_short.py
py_mecs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_channel.py  test_observer.py  test_query.py  test_scene.py  test_storage.py
