[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-mecs"
version = "0.1.1"
authors = [
  { name="Arthur Maul II", email="arthurmiiengineering@gmail.com" },
]
description = "A pythonic event driven entity component system"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/arthurmaul/Mecs"
Issues = "https://github.com/arthurmaul/Mecs/issues"
